# secunit

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  rest-test.http
secunit/: __init__.py  config.py  exc.py  utils.py  wsgi.py
secunit/config/: __init__.py  app.py  component.py  exc.py  one_of.py  selectable_type.py
secunit/drive_train/: __init__.py  drive_train.py  motor.py
secunit/resources/: production.json  settings.json  testing.json
secunit/static/: controller.html  controller.js  index.html  package-lock.json  package.json
secunit/web/: __init__.py  config.py  create_app.py  drive_train.py  settings.py  ui.py
static/: controller.html
tests/: conftest.py
tests/config/: test_app.py  test_selectable_type.py
tests/drive_train/: test_app.py  test_drive_train.py  test_motor.py
tests/test_drive_train/: test_drive_train.py
tests/web/: conftest.py  test_drive_train.py
