[tool.poetry]
name = "secunit"
version = "0.1.0"
description = ""
authors = ["DustinMoriarty <dustin.moriarty@protonmail.com>"]
include = ["secunit/resources/settings.json"]

[tool.poetry.dependencies]
python = "^3.7.3"
gpiozero = "^1.5.1"
coverage = "^5.3"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"
pytest = "^6.1.2"
tox = "^3.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
