[tool.poetry]
name = "secunit"
version = "0.1.0"
description = ""
authors = ["DustinMoriarty <dustin.moriarty@protonmail.com>"]
include = ["secunit/resources/*.json"]

[tool.poetry.dependencies]
python = "^3.7.3"
gpiozero = "^1.5.1"
coverage = "^5.3"
Flask = "^1.1.2"
config-injector = "^0.2.1"
jsonformatter = "^0.3.0"
gunicorn = {version = "^20.0.4", optional = true}

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"
pytest = "^6.1.2"
tox = "^3.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["secunit", "tests"]
filter_files = true

[tool.black]
line-length = 88
exclude = '''
/(
    \.eggs
  | \.git
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
